<resources>
    <string name="app_name">Music Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_results_found">number of results found</string>
    <string name="tab1_label">All Musics</string>
    <string name="tab2_label">Count</string>
    <string name="tab3_label">Grid</string>
    <string name="tab4_label">Horizontal</string>
    <string name="loading">Loading</string>
    <string name="ok"> Ok</string>
    <string name="deleted_successfully_message">The item deleted successfully</string>
    <string name="deleted_successfully_title">Success</string>
    <string name="alert_message_negative_button_title">Close</string>
    <string name="alert_message_positive_button_title">Try Again</string>
    <string name="alert_message_description">Technical Error</string>
    <string name="alert_message_title">Warning</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="price">Price</string>
    <string name="collection">Collection</string>
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
</resources>