<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab1"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/tab1_label"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/tab2"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/tab2_label"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/tab3"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/tab3_label"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/tab4"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/tab4_label"
        app:showAsAction="ifRoom|withText"
        />

</menu>